# DataDesignerPlugins

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  Makefile  README.md  pyproject.toml  zensical.toml
.claude/commands/: create-plugin.md
.codex/skills/data-designer-plugin-authoring/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish.yml
.gitlab/merge_request_templates/: new-plugin.md
catalog/: plugins.json
core/data-designer-plugins-core/: pyproject.toml
core/data-designer-plugins-core/src/dd_plugins_core/: __init__.py  bump_version.py  catalog.py  cli.py  codeowners.py  license_headers.py  scaffold.py  validate_plugins.py  validate_release.py
core/data-designer-plugins-core/tests/: test_bump_version.py  test_catalog.py  test_cli.py  test_codeowners.py  test_license_headers.py  test_repo.py  test_validate_release.py
devtools/ddp/: pyproject.toml
devtools/ddp/src/ddp/: __init__.py  _repo.py  bump_version.py  catalog.py  catalog_config.py  cli.py  codeowners.py  license_headers.py  package_index.py  plugin_docs.py  release_owners.py  scaffold.py  tap_config.py  validate_release.py
devtools/ddp/tests/: test_bump_version.py  test_catalog.py  test_catalog_config.py  test_catalog_fixtures.py  test_cli.py  test_codeowners.py  test_license_headers.py  test_package_index.py  test_plugin_docs.py  test_repo.py  test_scaffold.py  test_tap_config.py  test_validate_release.py
devtools/ddp/tests/fixtures/catalogs/: catalog-invalid-install.json  schema-v2-invalid-source.json  schema-v2-unsupported-version.json  schema-v2-valid.json
docs/: adding-a-plugin.md  authoring.md  catalog-schema.md  catalog.md  catalogs.md  index.md  package-index.md  releasing.md  tap-catalog-schema-v2.md  taps.md  workflow.md
docs/plugins/: index.md
docs/plugins/data-designer-curator/: index.md
docs/plugins/data-designer-generalist-agent-env/: index.md  usage.md
docs/plugins/data-designer-retrieval-sdg/: index.md
docs/plugins/data-designer-sandbox-piston/: usage.md
docs/plugins/data-designer-visual-search/: usage.md
docs/stylesheets/: extra.css
plugins/data-designer-agent-trace-turns/: README.md  pyproject.toml
plugins/data-designer-agent-trace-turns/src/data_designer_agent_trace_turns/: config.py  impl.py  plugin.py  trace_parser.py
plugins/data-designer-agent-trace-turns/tests/: test_plugin.py
plugins/data-designer-curator/: CODEOWNERS  README.md  pyproject.toml
plugins/data-designer-curator/docs/: index.md
plugins/data-designer-curator/src/data_designer_curator/: audit.py  config.py  errors.py  plugin.py
plugins/data-designer-curator/src/data_designer_curator/adapters/: curator_text.py
plugins/data-designer-curator/src/data_designer_curator/columns/: remote_score.py
plugins/data-designer-curator/src/data_designer_curator/processors/: dedup.py  filters.py  modifiers.py
plugins/data-designer-curator/tests/: conftest.py  test_curator_dedup_processor.py  test_curator_modify_processor.py  test_curator_text_adapter.py  test_curator_text_filter_processor.py  test_datadesigner_smoke.py  test_exact_dedup_processor.py  test_plugin.py  test_remote_score_column.py  test_score_filter_processor.py
plugins/data-designer-generalist-agent-env/: README.md  pyproject.toml
plugins/data-designer-generalist-agent-env/docs/: index.md  usage.md
plugins/data-designer-generalist-agent-env/src/data_designer_generalist_agent_env/: __init__.py  config.py  impl.py  plugin.py  validation.py
plugins/data-designer-generalist-agent-env/tests/: test_plugin.py
plugins/data-designer-github/: CODEOWNERS  README.md  pyproject.toml
plugins/data-designer-github/docs/: index.md  usage.md
plugins/data-designer-github/src/data_designer_github/: config.py  impl.py  plugin.py
plugins/data-designer-github/tests/: test_plugin.py
plugins/data-designer-list-explode/: CODEOWNERS  README.md  pyproject.toml
plugins/data-designer-list-explode/src/data_designer_list_explode/: config.py  impl.py  plugin.py
plugins/data-designer-list-explode/tests/: test_plugin.py
plugins/data-designer-retrieval-sdg/: CODEOWNERS  README.md  pyproject.toml
plugins/data-designer-retrieval-sdg/src/data_designer_retrieval_sdg/: __init__.py  chunking.py  cli.py  config.py  convert.py  dedup.py  ingest.py  models.py  pipeline.py  plugin.py  plugins.py  postprocess.py  prompts.py  recipe.py  seed_reader.py  seed_source.py
plugins/data-designer-retrieval-sdg/tests/: test_chunking.py  test_cli.py  test_convert.py  test_dedup.py  test_ingest.py  test_models.py  test_plugin.py  test_postprocess.py  test_recipe.py  test_seed_reader.py
plugins/data-designer-sandbox-piston/: CODEOWNERS  README.md  pyproject.toml
plugins/data-designer-sandbox-piston/docker/: Dockerfile  docker-compose.yml
plugins/data-designer-sandbox-piston/docs/: index.md
plugins/data-designer-sandbox-piston/scripts/: run-local-piston.sh
plugins/data-designer-sandbox-piston/src/data_designer_sandbox_piston/: __init__.py  __main__.py  client.py  config.py  impl.py  mcp_server.py  plugin.py
plugins/data-designer-sandbox-piston/tests/: test_plugin.py
plugins/data-designer-template/: CODEOWNERS  README.md  pyproject.toml
plugins/data-designer-template/docs/: index.md  usage.md
plugins/data-designer-template/src/data_designer_template/: config.py  impl.py  plugin.py
plugins/data-designer-template/tests/: test_plugin.py
plugins/data-designer-visual-search/: CODEOWNERS  README.md  pyproject.toml
plugins/data-designer-visual-search/docs/: examples.md  index.md
plugins/data-designer-visual-search/src/data_designer_visual_search/: config.py  impl.py  plugin.py  tools.py
plugins/data-designer-visual-search/tests/: test_plugin.py
tools/: aggregate_codeowners.py  generate_catalog.py  update_license_headers.py  validate_plugins.py  validate_release.py
