# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "data-designer-plugins-workspace"
version = "0.0.0"
description = "First-class NVIDIA-provided Data Designer plugins"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "devtools/ddp",
    "plugins/*",
]

[tool.uv]
package = false
required-version = ">=0.7.10"
constraint-dependencies = [
    "idna>=3.12",
    "python-multipart>=0.0.29",
    "urllib3>=2.7.0",
]

[tool.ddp.catalog]
catalog-url = "https://nvidia-nemo.github.io/DataDesignerPlugins/catalog/plugins.json"
repository-url = "https://github.com/NVIDIA-NeMo/DataDesignerPlugins"
repository-git-url = "https://github.com/NVIDIA-NeMo/DataDesignerPlugins.git"
docs-base-url = "https://nvidia-nemo.github.io/DataDesignerPlugins/"
package-prefix = "data-designer-"
package-index-url = "https://nvidia-nemo.github.io/DataDesignerPlugins/simple/"
package-assets-url = "https://github.com/NVIDIA-NeMo/DataDesignerPlugins/releases/download/ddp-package-assets/"
package-assets-release-tag = "ddp-package-assets"
release-ref-template = "{package}/v{version}"
default-data-designer-requirement = "data-designer>=0.5.7"
author-name = "NVIDIA Corporation"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie (misc lints)
    "TID",   # flake8-tidy-imports (ban relative imports)
    "UP006", # List[A] -> list[A]
    "UP007", # Union[A, B] -> A | B
    "UP045", # Optional[A] -> A | None
]
ignore = [
    "ANN401",
]

[tool.ruff.lint.isort]
known-first-party = ["ddp", "data_designer_github", "data_designer_retrieval_sdg", "data_designer_template"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["plugins"]

[dependency-groups]
dev = [
    "dumb-pypi>=1.15.0",
    "twine>=6.0.0",
    "zensical>=0.0.40",
]
