# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "ddp"
version = "0.1.0"
description = "Local dev-only monorepo management tooling for data-designer-plugins (not a runtime dependency)"
requires-python = ">=3.10"
dependencies = [
    # Backport of the stdlib `tomllib` (added in 3.11); only installed on 3.10.
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.scripts]
ddp = "ddp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ddp"]

[tool.ruff]
extend = "../../pyproject.toml"
