# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "data-designer-agent-trace-turns"
version = "0.1.0"
description = "Normalize agent traces into one row per conversation turn"
requires-python = ">=3.10"
dependencies = [
    "data-designer>=0.5.3",
]
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "NVIDIA Corporation"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

[project.entry-points."data_designer.plugins"]
agent-trace-turns = "data_designer_agent_trace_turns.plugin:plugin"

[project.urls]
Repository = "https://gitlab-master.nvidia.com/etramel/data-designer-plugins"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_agent_trace_turns"]

[tool.ruff]
extend = "../../pyproject.toml"
