# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "data-designer-curator"
version = "0.1.0"
description = "NeMo Curator-backed curation processors for Data Designer"
requires-python = ">=3.10,<3.13"
dependencies = [
    "data-designer>=0.5.7",
]
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "NVIDIA Corporation"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
curator-text-cpu = [
    "nemo-curator[text_cpu]>=1.1.0,<2",
]
all = [
    "nemo-curator[text_cpu]>=1.1.0,<2",
]

[project.entry-points."data_designer.plugins"]
exact-dedup = "data_designer_curator.plugin:exact_dedup_plugin"
curator-modify = "data_designer_curator.plugin:curator_modify_plugin"
curator-text-filter = "data_designer_curator.plugin:curator_text_filter_plugin"

[project.urls]
Repository = "https://github.com/NVIDIA-NeMo/DataDesignerPlugins"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_curator"]

[tool.ruff]
extend = "../../pyproject.toml"
