# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "data-designer-generalist-agent-env"
version = "0.1.0"
description = "Generalist agent environment tuple generator for Data Designer"
requires-python = ">=3.10"
dependencies = [
    "data-designer>=0.5.9",
]
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "NVIDIA Corporation"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

[project.entry-points."data_designer.plugins"]
generalist-agent-env = "data_designer_generalist_agent_env.plugin:plugin"

[project.urls]
Repository = "https://github.com/NVIDIA-NeMo/DataDesignerPlugins"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_generalist_agent_env"]

[tool.ruff]
extend = "../../pyproject.toml"
