# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "data-designer-list-explode"
version = "0.1.0"
description = "Data Designer plugin — explode list-valued columns into one row per element"
requires-python = ">=3.10"
dependencies = [
    "data-designer>=0.5.3",
]
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "NVIDIA Corporation"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

[project.entry-points."data_designer.plugins"]
list-explode = "data_designer_list_explode.plugin:plugin"

[project.urls]
Repository = "https://gitlab-master.nvidia.com/etramel/data-designer-plugins"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_list_explode"]

[tool.ruff]
extend = "../../pyproject.toml"
