# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "data-designer-retrieval-sdg"
version = "0.1.0"
description = "Multi-step retriever SDG pipeline (artifact extraction, QA generation, dedup, evaluation) with Automodel-compatible data conversion; registers a retrieval-sdg-dedup column plugin"
requires-python = ">=3.10"
dependencies = [
    "data-designer>=0.5.7",
    "nltk>=3.9.2",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
]
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "NVIDIA Corporation"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.entry-points."data_designer.plugins"]
retrieval-sdg-dedup = "data_designer_retrieval_sdg.plugin:plugin"

[project.scripts]
data-designer-retrieval-sdg = "data_designer_retrieval_sdg.cli:main"

[project.urls]
Repository = "https://github.com/NVIDIA-NeMo/DataDesignerPlugins"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_retrieval_sdg"]

[tool.ruff]
extend = "../../pyproject.toml"
