# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "data-designer-retrieval-sdg"
version = "0.1.0"
description = "Retriever SDG toolkit: registers the embedding-dedup column generator and document-chunker seed reader, plus a multi-step QA generation pipeline, CLI, and Automodel-compatible data conversion"
requires-python = ">=3.10"
dependencies = [
    "data-designer>=0.6.0",
    "nltk>=3.9.2",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
]
license = "Apache-2.0"
readme = "README.md"
authors = [
    {name = "NVIDIA Corporation"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.entry-points."data_designer.plugins"]
embedding-dedup = "data_designer_retrieval_sdg.plugins:embedding_dedup_plugin"
document-chunker = "data_designer_retrieval_sdg.plugins:document_chunker_plugin"

[project.scripts]
data-designer-retrieval-sdg = "data_designer_retrieval_sdg.cli:main"

[project.urls]
Repository = "https://github.com/NVIDIA-NeMo/DataDesignerPlugins"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_retrieval_sdg"]

[tool.ruff]
extend = "../../pyproject.toml"
