# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "data-designer-template"
version = "0.1.0"
description = "Template Data Designer plugin — text transform column generator"
requires-python = ">=3.10"
dependencies = [
    "data-designer",
]

[project.entry-points."data_designer.plugins"]
text-transform = "data_designer_template.plugin:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_template"]

[tool.ruff]
extend = "../../pyproject.toml"
